# slurmx

./: .gitignore  README.md  WELCOME.md  claude_job.py  config.example.py  config.example.yisroel.py  maintenance.py  pyproject.toml  server.py  setup.sh  slurm_mcp.py  slurm_utils.py  submit_job.py  update.sh
cli/: _style.py  cancel.py  diagnose.py  history.py  job_status.py  log.py  render.py  select_gpu.py  slurmx.py  status.py  submit.py  theme.py  wait.py  watch.py
config-examples/: default.py  yisroel.py
slurm_mcp/: __init__.py  availability.py  diagnostics.py  gpu_catalog.py  history.py  jobs.py  monitoring.py  remote_session.py  selection.py  shell.py  submission.py  types.py
tests/: test_launch_remote_session.py  test_slurm_mcp.py  test_slurm_utils.py
