[project]
name = "slurmx"
version = "1.0.0"
description = "MCP server + unified CLI for SLURM GPU job management"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
slurmx = "cli.slurmx:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cli", "slurm_mcp"]
include = [
    "server.py",
    "maintenance.py",
    "config.py",
]
